feat: support custom shell generator (#49)